  - plot.stslist.modst() new attribute 'info' to control
    whether frequency of sequence of modal state should
    be displayed.
  - plot.ststlist.meant() now uses an internal function
    to draw error bars to avoid issues with dependence
    on Hmisc.
  - plot.ststlist.meant() new arguments 'bar.labels',
    'cex.barlab', and 'offset.barlab' to display and
    control bar labels.
  - seqformat() with from="SPELL", provides info about
    number of sequences truncated, empty sequences because
    of spell occurring before birth year, empty because
    of missing start time. A new attribute 'issues' contains
    the indexes of sequences with issues.
  - seqdef() now prints, when applicable, the number of
    empty sequences and lists the first 9 empty sequences only.

Bug fixes:
  - seqdiff() negative values in cmprange caused an error.
  - seqdiff() Changed deprecated norm=TRUE into
    norm='auto' in default seqdist.args value.

Misc.
  - Dependence on boot and RColorBrewer replaced by importFrom
    of functions boot and brewer.pal.


## =========
Version 2.2-2 [2021-06-03]

New functions:
  - seqidegrad() degradation index (replaces seqprecorr() that
    becomes obsolete). Class seqprecorr now named seqidegrad
    and associated print method renamed accordingly.
  - seqibad() badness index.
  - seqinsecurity() insecurity index.
  - dissdomassoc() computes measures proposed in
    Piccarreta (SMR 2017) to assess the degree of association
    between domains.

Changes in existing functions:
  - seqdist() can now compute distances between two subsets of
    sequences. The subsets are defined by providing a list with
    two subsets of sequence indexes as 'refseq' argument.
  - seqdist() dimnames of the objects returned by seqdist are
    now all set from the rownames of the provided sequence object.
  - seqdist() method="DHD" now supports sm="INDELS" and
    sm="INDELSLOG".
  - seqcost() time.varying=TRUE works with "INDELS"
    and "INDELSLOG".